# DataLoader4EO

./: .gitignore  README.md  pyproject.toml  test.py  test_benchmark.py
Dataset4EO/: GeoTiffStreaming.py  channel_wise.py  create_geotiff_dataset.py  dataset.py  image_wise.py
Dataset4EO/channel_wise_optimized_dataset/: index.json
builtin_datasets/: datasets_with_problems  test_dataset.py
builtin_datasets/DFC2022/: collect_data.py
builtin_datasets/DeepGlobeLandCover/: collect_data.py
builtin_datasets/ETCI2021/: collect_data.py
builtin_datasets/FireRisk/: collect_data.py  firerisk.py
builtin_datasets/GAMUS/: collect_data.py
builtin_datasets/GID-15/: collect_data.py
builtin_datasets/GeoNRW/: collect_data.py
builtin_datasets/InriaAerialImageLabeling/: collect_data.py
builtin_datasets/LEVIRCD/: collect_data.py
builtin_datasets/LEVIRCDPlus/: collect_data.py
builtin_datasets/LandCoverAI/: collect_data.py
builtin_datasets/LoveDA/: collect_data.py
builtin_datasets/PatternNet/: collect_data.py
builtin_datasets/So2Sat/: collect_data.py  so2sat.py
builtin_datasets/USAVars/: collect_data.py
channel_wise_optimized_dataset/: index.json
dataset4eo/: __init__.py  multichannel.py  streaming.py  utils.py
datasets/: GAMUS_dataset.py  create_gamus.py  gamus.py  test_dataset.py
datasets_implementation/So2Sat/: test_data.py
full_image_optimized_dataset/: index.json
src/: multichannel.py  upload_hf.py  utils.py
src/datasets/: create_gamus.py  create_gamus_channelwise.py  gamus.py  gamus_channelwise.py  test_dataset.py
tests/: channel_wise.py  test_benchmark.py
