[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Dataset4EO"
version = "0.1.0"
description = "Project with specific dependencies"
authors = [
    { name = "Zhitong Xiong", email = "xiongzhitong@gmail.com" }
]


dependencies = [
    "torch==2.1.2",
    "torchvision==0.16.2",
    "numpy==1.26.4",
    "torchgeo",
    "litdata",
    "fastparquet",
    "litdata",
    "h5py",
]

